fixed some spacing on output

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ body {
     align-content: center;
     min-height: 100vh;
     font-size: 2rem;
-    grid-template-rows: minmax(120px, auto) repeat(6,100px);
+    
     text-align: center;
     
 
